docs: include reservation status in swagger
