# back/central-reserve/internal/infra/primary/http2/handlers/reservehandler/create-reserve.go
@@ -16,7 +16,7 @@ import (
 // @Produce      json
 // @Security     BearerAuth
 // @Param        reservation  body      request.Reservation  true  "Datos de la reserva"
-// @Success      201          {object}  map[string]interface{} "Reserva creada exitosamente"
+// @Success      201          {object}  response.ReserveSuccessResponse "Reserva creada exitosamente"
 // @Failure      400          {object}  map[string]interface{} "Solicitud inválida"
 // @Failure      401          {object}  map[string]interface{} "Token de acceso requerido"
 // @Failure      500          {object}  map[string]interface{} "Error interno del servidor"
