# back/central-reserve/internal/infra/primary/http2/handlers/reservehandler/mapper/reserve-mapper.go
@@ -26,6 +26,7 @@ func MapToReserveDetail(dto dtos.ReserveDetailDTO) response.ReserveDetail {
 		NumberOfGuests:     dto.NumberOfGuests,
 		ReservaCreada:      dto.ReservaCreada,
 		ReservaActualizada: dto.ReservaActualizada,
+		EstadoID:           dto.EstadoID,
 		EstadoCodigo:       dto.EstadoCodigo,
 		EstadoNombre:       dto.EstadoNombre,
 		ClienteID:          dto.ClienteID,
